[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemies/EnemyTsuHiragana.gd" type="Script" id=1]
[ext_resource path="res://Enemies/hiraganaTsu.png" type="Texture" id=2]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 35.0

[sub_resource type="CircleShape2D" id=2]
radius = 208.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 27.0
height = 25.0

[node name="Tsu" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.917647, 0.917647, 0.0784314, 0.756863 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]
wander_range = 150

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -17 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 6 )]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -35, -38, 75, 45 )
physics_process_parent = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]

[editable path="Hurtbox"]
